# Agent-Central

./: .gitignore  AGENTS.md  ANALYSIS_INDEX.md  COMPETITIVE_MATRIX.md  EXECUTIVE_SUMMARY.md  FEASIBILITY_ANALYSIS.md  JULES_LOG.json  README.md  README_NEW.md  agency.yaml  pyproject.toml  requirements.txt  task.md  update_imports.py
.agency-hq/roles/: frontend-dev.md
.agency-hq/templates/: agency.yaml
.ai-context/: ACTIVE_PERSONA.md
.ai-context/team/: architect.md  jules-qa.md
.github/workflows/: ci.yml
agency-hq/knowledge/: README.md
agency-hq/knowledge/archive/patterns/: intel_learning.md  learning_Agent-Central_20260203_180932.md  test_learning.md  (+1 more)
agency-hq/roles/: architect.md  backend-dev.md  jules-qa.md  task-assigner.md
agency-hq/skills/: skills.json
agency-hq/skills/app-store-optimization/: ab_test_planner.py  aso_scorer.py  competitor_analyzer.py  keyword_analyzer.py  launch_checklist.py  localization_helper.py  metadata_optimizer.py  review_analyzer.py
agency-hq/templates/: agency.yaml  roster-template.yaml
agent_central/: main.py
agent_central.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
agent_central/commands/: hire.py  init.py  ops.py  skills.py
agent_central/models/: agency_config.py
agent_central/services/: embedding_service.py  git_service.py  hq_service.py  profile_service.py  selection_service.py  skill_service.py
agent_central/services/tests/: test_hq_service.py
agent_central/tests/: test_hq_service_security.py
src/: main.py
src/commands/: hire.py  init.py  ops.py
src/services/: hq_service.py
(+60 files in other folders)
